<resources>
    <string name="app_name">SP App</string>

    <!--font-->
    <string name="font_default">@string/font_regular</string>

    <string name="font_book">fonts/Geomanist-Book.ttf</string>
    <string name="font_medium">fonts/Geomanist-Medium.ttf</string>
    <string name="font_regular">fonts/Geomanist-Regular.ttf</string>
    <string name="font_bold">fonts/Geomanist-Bold.ttf</string>
    <string name="font_light">fonts/Geomanist-Light.ttf</string>

    <string name="from">From</string>
    <string name="view_summary">VIEW SUMMARY</string>
    <string name="service_desc_header">Exclusive On This App</string>
    <string name="bussiness_info_header">Business Information</string>
    <string name="summary">Summary</string>
    <string name="your_contact_info">Please enter your details:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact Number</string>
    <string name="preferred_time">Preferred Time of Contact</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="notes">Notes</string>
    <string name="summary_notes_hint">Eg. Delivered items to be placed in the cabinet beside the front gate.</string>
    <string name="remember_me">Save my contact details</string>
    <string name="sum_order_agreement">By submitting, you allow us to send this request to our partner to contact you on the above-mentioned request.</string>
    <string name="est_price">Est. Price</string>
    <string name="est_total">Est. Total</string>
    <string name="submit_request">SUBMIT REQUEST</string>
    <string name="customise_screen_title">Customise Your Request</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="formated_optional">[optional]</string>
    <string name="service_customise_hint">Eg. No beef and peanut. Low salt.</string>
    <string name="add_request">ADD REQUEST</string>
    <string name="update_request">UPDATE REQUEST</string>
    <string name="estimated_total_price">Estimated Total Price</string>
    <string name="optional_with_symbol">[optional]</string>
    <string name="discount_with_desc">Discount (%s)</string>
    <string name="discount">Discount</string>

    <string name="see_more_services">SEE MORE SERVICES</string>
    <string name="ack_email_sent">We have sent a copy of your service\nrequest to your email inbox.</string>
    <string name="ack_get_in_touch">The service provider will get in touch\nwith you soon.</string>
    <string name="request_number">Request number: #%s</string>
    <string name="hardcode_3_dishes">3 Dishes Plus 1 Soup\nMeal Set</string>
    <string name="edit">Edit</string>
    <string name="back_to_view_summary">BACK TO VIEW SUMMARY</string>
    <string name="update_and_view_summary">UPDATE AND VIEW SUMMARY</string>
    <string name="unsaved_data_alert">Leave without\nupdating changes?</string>
    <string name="yes_all_caps">YES</string>
    <string name="no_all_caps">NO</string>
    <string name="invalid">Invalid</string>
    <string name="required">Required</string>
    <string name="check_input_warning">Please check your input again</string>
    <string name="error_detected_format">%d Errors Detected</string>
    <string name="error_detected_1">1 Error Detected</string>
    <string name="home_header">Check Out\nOur Services</string>
    <string name="home_short_desc">Professional services that will make your day!</string>
    <string name="home">Home</string>

    <string name="featured_promotions">Featured Promotions</string>
    <string name="featured_merchants">Featured Merchants</string>
    <string name="about_us">About Us</string>
    <string name="ack">Acknowledgement</string>
    <string name="tnc">Terms &amp; Conditions</string>
    <string name="powered_by">Powered By SP Group</string>
    <string name="app_version">Version %s</string>

    <string name="behavior_home_text_view">com.spgroup.spapp.presentation.view.behavior.HomeTextViewBehavior</string>
    <string name="behavior_home_menu_view">com.spgroup.spapp.presentation.view.behavior.HomeMenuViewBehavior</string>
    <string name="behavior_partner_detail">com.spgroup.spapp.presentation.view.behavior.PartnerDetailBehavior</string>
    <string name="empty_request_summary">Empty Request\nSummary</string>
    <string name="no_service_request">You have no service request.</string>
    <string name="see_services">SEE SERVICES</string>
    <string name="merchant_tnc_with_format">Merchant’s %s apply.</string>
    <string name="merchant_tnc_underline_text">terms &amp; conditions</string>
    <string name="visit_website">VISIT WEBSITE</string>
    <string name="website_not_found">Website not found</string>
    <string name="summary_go_back_instruction">Add another item from %s?</string>
    <string name="back_to_listing">BACK TO LISTING</string>

    <string name="error_loading_pdf">Somethings went wrong. Can not load PDF</string>
    <string name="not_available">Not Available</string>
    <string name="loading">Loading…</string>
    <string name="error_submit_request">Somethings went wrong. Can not submit request!</string>
    <string name="this_week_menu">This Week\'s Menu</string>
    <string name="new_version_available">New Version\nAvailable</string>
    <string name="update_description">Check out the latest version of the app.</string>
    <string name="update">UPDATE</string>
    <string name="on_boarding_tnc_formatted">By starting, you agree to our %s.</string>
    <string name="get_started">GET STARTED</string>
    <string name="next">NEXT</string>
    <string name="onboarding_text_0">Check Out Our\nMerchants</string>
    <string name="onboarding_text_1">Find Services For\nYour Everyday Needs</string>
    <string name="onboarding_text_2">Submit A Request\nVia The App</string>
    <string name="onboarding_text_3">Liaise With Merchants\nAt Your Convenience</string>

    <string name="onboarding_tnc_with_placeholder">By starting, you agree to our %s.</string>

    <string name="error_update_app_empty_url">Something went wrong. Can not find url to update Application</string>
    <string name="error_update_app_activity_not_found">Something went wrong. Can not open url to update Application</string>

    <string name="no_internet_title">Oh Snap!</string>
    <string name="no_internet_desc">Your internet connection appears to be offline. Please check and try again.</string>
    <string name="refresh">REFRESH</string>
    <string name="back">BACK</string>
    <string name="retry">RETRY</string>
    <string name="no_internet_connection_error_message">No Internet Connection</string>

    <string name="file_not_found_title">Uh Ooooh!</string>
    <string name="file_not_found_desc">Sorry! File not found.</string>

    <string name="api_error_title">Whoooops!</string>
    <string name="api_error_desc">Something went wrong.</string>
    <string name="dialog_min_order_title">You have not met the minimum spend of \n%s</string>
    <string name="dialog_min_order_notice">Additional charges will apply.</string>
    <string name="text_continue">CONTINUE</string>
    <string name="add_more_services">ADD MORE SERVICES</string>
    <string name="surcharge_label">Additional Charge</string>
    <string name="merchant_tnc_title">Merchant’s Terms &amp; Conditions</string>
    <string name="order_summary_checkbox_item_desc">Measurement and/or evaluation will be done on-site. Price estimation will not be included in this request</string>

    <string name="partner_details_alert_title">You are about to leave the merchant’s page.</string>
    <string name="partner_details_alert_desc">If you continue, your current selection(s) will be removed from the Summary page.</string>
    <string name="cancel">CANCEL</string>

    <string name="dialog_min_order_checkbox_title_with_format">Minimum spend of \n%s is required</string>
    <string name="dialog_min_order_checkbox_desc">Additional charges may apply after on-site estimation.</string>
    <string name="ok">OK</string>

    <string name="surcharge_with_price">Surcharge for orders below %s</string>
    <string name="order_summary_disclaimer_with_format">By clicking ‘Submit Request’, you have read and have agreed to our %s. You have also allowed us to send this request to our partnering merchant to connect with you about - mentioned request.</string>

    <string name="customise_hint_food">Eg. No beef and peanuts. Less salt.</string>
    <string name="customise_hint_laundry">Eg. Please dry-clean my formal clothes.</string>
    <string name="customise_hint_aircon">Eg. Repair living room aircon.</string>
    <string name="customise_hint_housekeeping">Eg. Clean mattress. Iron clothes.</string>

    <string name="summary_hint_food">Eg. Delivered items to be placed in the cabinet beside the front gate.</string>
    <string name="summary_hint_laundry">Eg. Please leave laundry on doorstep.</string>
    <string name="summary_hint_aircon">Eg. Please enter and call unit number code at entrance.</string>
    <string name="summary_hint_housekeeping">Eg. Please note that I own a big dog.</string>

    <string name="error_no_mail_client_installed">No email application installed.</string>
    <string name="chooser_mail_client">Send email using&#8230;</string>
    <string name="error_phone_number_empty">Phone number is empty!</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="additional_charge_checkbox_notice">Additional charges may apply after on-site estimation.</string>
    <string name="subtotal">Subtotal</string>

</resources>
