<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/common_vert_large"
    android:paddingLeft="@dimen/common_horz_large"
    android:paddingRight="@dimen/common_horz_large"
    android:paddingBottom="@dimen/common_vert_small"
    android:background="@color/color_white"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_min_order_text_size_title"
        android:textColor="@color/color_grey"
        android:gravity="center_horizontal"
        fontPath="@string/font_book"
        tools:text="@string/dialog_min_order_title"
        />


    <TextView
        style="@style/body"
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_grey"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_vert_small"
        tools:text="@string/dialog_min_order_notice"
        />
    
    <TextView
        style="@style/textButton"
        android:id="@+id/tv_positive"
        android:layout_marginTop="@dimen/common_vert_medium"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        tools:text="@string/text_continue"
        />

    <TextView
        style="@style/textButton.white"
        android:id="@+id/tv_negative"
        android:layout_marginTop="@dimen/common_vert_medium"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        tools:text="@string/add_more_services"
        />


</LinearLayout>