<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        style="@style/h5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/color_ui01"
        android:text="@string/summary"
        android:gravity="center"
        android:textColor="@color/color_white"
        />
    
    <ImageView
        android:layout_width="@dimen/empty_request_icon_size"
        android:layout_height="@dimen/empty_request_icon_size"
        android:layout_above="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/common_vert_large"
        android:src="@drawable/empty_summary"
        android:scaleType="fitXY"
        />

    <TextView
        style="@style/h3"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_request_summary"
        android:textColor="@color/color_black"
        android:gravity="center_horizontal"
        />

    <TextView
        style="@style/body"
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_service_request"
        android:textColor="@color/color_grey"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="@dimen/common_vert_small"
        />

    <TextView
        style="@style/h5"
        android:id="@+id/tv_see_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_vert_xxlarge"
        android:layout_marginRight="@dimen/common_vert_xxlarge"
        android:background="@drawable/selector_btn_main"
        android:paddingTop="@dimen/common_vert_medium"
        android:paddingBottom="@dimen/common_vert_medium"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tv_description"
        android:layout_marginTop="@dimen/common_vert_xxlarge"
        android:text="@string/see_services"
        android:textColor="@color/color_white"
        />

</RelativeLayout>