<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ui01"
    >

    <TextView
        style="@style/h3"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_version_available"
        android:textColor="@color/color_white"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/common_horz_large"
        android:layout_marginRight="@dimen/common_horz_large"
        android:gravity="center_horizontal"
        />

    <TextView
        style="@style/body"
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_description"
        android:textColor="@color/color_white"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="@dimen/common_horz_large"
        android:layout_marginRight="@dimen/common_horz_large"
        android:layout_marginTop="@dimen/common_vert_small"
        android:gravity="center_horizontal"
        />

    <TextView
        style="@style/h5"
        android:id="@+id/tv_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/color_ui01"
        android:background="@drawable/selector_btn_white"
        android:paddingTop="@dimen/common_vert_medium"
        android:paddingBottom="@dimen/common_vert_medium"
        android:layout_marginLeft="@dimen/update_btn_horz_margin"
        android:layout_marginRight="@dimen/update_btn_horz_margin"
        android:layout_marginTop="@dimen/common_vert_xlarge"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tv_description"
        />

    <ImageView
        android:layout_width="@dimen/update_icon_size"
        android:layout_height="@dimen/update_icon_size"
        android:src="@drawable/sp_app_icon_white"
        android:layout_above="@+id/tv_title"
        android:layout_marginBottom="@dimen/common_vert_large"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>