<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        style="@style/footnote"
        android:id="@+id/tv_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_tnc_formatted"
        android:layout_alignParentBottom="true"
        android:textColor="@color/color_grey"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/common_vert_medium"
        android:visibility="gone"
        />


    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/pager_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/onboarding_indicator_margin_bot"
        android:layout_alignParentBottom="true"
        app:ci_animator="@anim/anim_indicator"
        app:ci_animator_reverse="@anim/anim_indicator"
        app:ci_drawable="@drawable/indicator_active"
        app:ci_drawable_unselected="@drawable/indicator_inactive_grey"
        app:ci_height="@dimen/indicator_size"
        app:ci_width="@dimen/indicator_size"
        />

    <FrameLayout
        android:id="@+id/fl_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pager_indicator"
        >

        <TextView
            style="@style/onBoardingBottomButton"
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:background="@drawable/selector_btn_white"
            android:textColor="@color/color_ui01"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/common_vert_medium"
            android:paddingRight="@dimen/common_vert_medium"
            android:text="@string/next"
            />

        <TextView
            style="@style/onBoardingBottomButton"
            android:id="@+id/tv_get_started"
            android:background="@drawable/selector_btn_main"
            android:textColor="@color/color_white"
            android:text="@string/get_started"
            android:visibility="gone"
            />

    </FrameLayout>

</RelativeLayout>